--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./Assignment 1/index.html"></a>
+    <a href="Assignment 1/index.html></a>
 </body>
 </html>
