--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSCI 202 Portfolio</title>
 </head>
 <body>
-    <a href="Assignment 1/index.html></a>
+    <h1>CSCI 202 Portfolio</h1>
+    <a href="Assignment 1/index.html">Assignment 1</a>
 </body>
 </html>
