--- a/Assignment 3/responsive.html
+++ b/Assignment 3/responsive.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assignment3.css">
-    <script src="/js/sketchresponsive.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
+    <script src="js/sketchresponsive.js"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.3/addons/p5.sound.min.js"></script>
     <title>CSCI 202 | Assignment 3</title>
 </head>
@@ -22,8 +23,10 @@
     <main>
         <h1>Vandoesburg Counter composition XIII | Static</h1>
         <img src="images/Vandoesburg_Counter_composition_XIII.jpg">
-        <script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
-        <script src="/js/sketchresponsive.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
+<script src="js/sketchresponsive.js"></script>
+
     </main>
     <footer>
         
