--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ol>
         <li><a href="Assignment 1/index.html">Assignment 1</a></li>
         <li><a href="Assignment 2/assignment2index.html">Assignment 2</a></li>
+        <li><a href="Assignment 3/assignment3index.html">Assignment 3</a></li>
     </ol>
 </body>
 </html>
