--- a/Assignment 3/responsive.html
+++ b/Assignment 3/responsive.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <h1>Vandoesburg Counter composition XIII | Static</h1>
+        <h1>Vandoesburg Counter composition XIII | Responsive</h1>
         <img src="images/Vandoesburg_Counter_composition_XIII.jpg">
         <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
 <script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D/p5.collide2d.min.js"></script>
