--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="Assignment 1/index.html">Assignment 1</a></li>
         <li><a href="Assignment 2/assignment2index.html">Assignment 2</a></li>
         <li><a href="Assignment 3/assignment3index.html">Assignment 3</a></li>
+        <li><a href="Assignment Site-Specific Mobile/examples-main/starter/index.html">Assignment 4 | Site-specific mobile website</a></li>
     </ol>
     <h2>24 Hour No Phone Assignment</h2>
     <p>
