--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
         <li><a href="Assignment 1/index.html">Assignment 1</a></li>
         <li><a href="Assignment 2/assignment2index.html">Assignment 2</a></li>
         <li><a href="Assignment 3/assignment3index.html">Assignment 3</a></li>
-        <li><a href="Assignment Site-Specific Mobile/examples-main/starter/index.html">Assignment 4 | Site-specific mobile website</a></li>
+        <li><a href="Assignment Site-Specific Mobile/examples-main/starter/index.html">Site-specific mobile website</a></li>
         <li><a href="Assignment 5 JSON/index.html">Assignment 5</a></li>
     </ol>
+    <h2>Interesting Wesbites</h2>
+    <ol>
+        <li><a href="https://www.nerdwallet.com/cost-of-living-calculator">Nerd Wallet</a></li>
+        <li><a href="https://jollyturns.com/">Jolly Turns</a></li>
+        <li><a href="https://www.mountainproject.com/">Mountain Project</a></li>
+        <li><a href="https://www.geoguessr.com/">Geoguessr</a></li>
+        <li><a href="https://www.fiverr.com/">Fiverr</a></li>
+        <li><a href="https://chromewebstore.google.com/detail/chrome-audio-capture/kfokdmfpdnokpmpbjhjbcabgligoelgp">Chrome Audio Capture</a></li>
+    </ol>
     <h2>24 Hour No Phone Assignment</h2>
-    <p>
-Last weekend, I took on the challenge of unplugging from my phone and computer by going camping with four friends at Rasar State Park. It felt like the perfect opportunity to disconnect — being surrounded by trees, a river, and no cell service naturally encouraged me to put technology aside. <br>
-Before we left, I texted my family to let them know I would be offline for the weekend, which helped ease any anxiety about being unreachable. Once we arrived, I turned off my phone and left it completely out of sight in the car. At first, I noticed how often my hand instinctively reached for my pocket, especially during moments of stillness like waiting for food to cook or sitting around the campfire. It was clear how often the habit of checking my phone had become. <br>
-As the day went on, the urge to check notifications faded. Without screens, I became more present — noticing small things like the sound of the wind in the trees, the different bird calls, and the way the sunlight shifted through the forest. Conversations with my friends felt deeper and more focused. We played card games, went on a long hike, and spent hours just talking and laughing without distractions of our phone and the online world. <br>
-Emotionally, I felt a sense of freedom and lightness, but also a weird vulnerability. Without the "shield" of my phone, I was more exposed to boredom, awkward silences, and unfiltered experience. It reminded me of some of our class readings about how technology mediates our interactions and even our sense of self. Being unplugged made me realize how often I use my phone as a tool to escape or manage emotions. <br>
-Overall, this experience highlighted how refreshing and necessary it can be to disconnect — not just physically, but mentally. It made me want to build more intentional “unplugged” time into my regular life, even if just for a few hours at a time.
-    </p>
+    <ul>
+        <li><a href="nophone.html">Read Here</a></li>
+    </ul>
 </body>
 </html>
