--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <li><a href="Assignment 2/assignment2index.html">Assignment 2</a></li>
         <li><a href="Assignment 3/assignment3index.html">Assignment 3</a></li>
         <li><a href="Assignment Site-Specific Mobile/examples-main/starter/index.html">Site-specific mobile website</a></li>
-        <li><a href="Assignment 5 JSON/index.html">Assignment 5</a></li>
+        <li><a href="Assignment 5 JSON/index.html">Assignment 4 | JSON</a></li>
+        <li><a href="Assignment 5 ElizaChatbot/Assignment_5_elizaChat/elizabot/index.html">Assignment 5 | ElizaChatbot</a></li>
     </ol>
-    <h2>Interesting Wesbites</h2>
+    <h2>Interesting Websites</h2>
     <ol>
         <li><a href="https://www.nerdwallet.com/cost-of-living-calculator">Nerd Wallet</a></li>
         <li><a href="https://jollyturns.com/">Jolly Turns</a></li>
