--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <li><a href="Assignment 3/assignment3index.html">Assignment 3</a></li>
         <li><a href="Assignment Site-Specific Mobile/examples-main/starter/index.html">Site-specific mobile website</a></li>
         <li><a href="Assignment 5 JSON/index.html">Assignment 4 | JSON</a></li>
-        <li><a href="Assignment 5 ElizaChatbot/Assignment_5_elizaChat/elizabot/index.html">Assignment 5 | ElizaChatbot</a></li>
+        <li><a href="Assignment 5 ElizaChatbot/Assignment_5_elizaChat/elizabot/index.html">Assignment 5 | ElizaChatbot</a>
+        <a href="https://copilot.microsoft.com/chats/t5CiVFhjobKDEMFqz1VtS">Co Pilot Eliza</a></li></li>
     </ol>
     <h2>Interesting Websites</h2>
     <ol>
