--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="Assignment 5 JSON/index.html">Assignment 4 | JSON</a></li>
         <li><a href="Assignment 5 ElizaChatbot/Assignment_5_elizaChat/elizabot/index.html">Assignment 5 | ElizaChatbot</a>
         <a href="https://copilot.microsoft.com/chats/t5CiVFhjobKDEMFqz1VtS">Co Pilot Eliza</a></li></li>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/r7U7BM2ASf6i98Yr61gcIK/CSCI-202-Slideshow?node-id=2-723&embed-host=share" allowfullscreen></iframe>
     </ol>
     <h2>Interesting Websites</h2>
     <ol>
