--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <li><a href="Assignment 3/assignment3index.html">Assignment 3</a></li>
         <li><a href="Assignment Site-Specific Mobile/examples-main/starter/index.html">Site-specific mobile website</a></li>
         <li><a href="Assignment 5 JSON/index.html">Assignment 4 | JSON</a></li>
-        <li><a href="Assignment 5 ElizaChatbot/Assignment_5_elizaChat/elizabot/index.html">Assignment 5 | ElizaChatbot</a>
-        <a href="https://copilot.microsoft.com/chats/t5CiVFhjobKDEMFqz1VtS">Co Pilot Eliza</a></li></li>
+        <li><a href="Assignment 5 ElizaChatbot/Assignment_5_elizaChat/elizabot/index.html">Assignment 5 | ElizaChatbot</a></li>
+        <li><a href="https://copilot.microsoft.com/chats/t5CiVFhjobKDEMFqz1VtS">Co Pilot Eliza</a></li>
+         <li><a href="https://maxduenhoelter.wixsite.com/portfolio">Final Project Rough Draft</a></li>
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/r7U7BM2ASf6i98Yr61gcIK/CSCI-202-Slideshow?node-id=2-723&embed-host=share" allowfullscreen></iframe>
     </ol>
     <h2>Interesting Websites</h2>
