--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <li><a href="Assignment 5 JSON/index.html">Assignment 4 | JSON</a></li>
         <li><a href="Assignment 5 ElizaChatbot/Assignment_5_elizaChat/elizabot/index.html">Assignment 5 | ElizaChatbot</a></li>
         <li><a href="https://copilot.microsoft.com/chats/t5CiVFhjobKDEMFqz1VtS">Co Pilot Eliza</a></li>
-         <li><a href="https://maxduenhoelter.wixsite.com/portfolio">Final Project Rough Draft</a></li>
-        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/r7U7BM2ASf6i98Yr61gcIK/CSCI-202-Slideshow?node-id=2-723&embed-host=share" allowfullscreen></iframe>
+        <li><a href="https://maxduenhoelter.wixsite.com/portfolio">Final Project Rough Draft</a></li>
+        <li><a href="https://maxduenhoelter.com">Final Project</a></li>
+        <li><a href="https://youtu.be/ZrZsCpmGf6o">Final Project Youtube Link</a></li>
     </ol>
     <h2>Interesting Websites</h2>
     <ol>
@@ -27,7 +28,11 @@
         <li><a href="https://www.geoguessr.com/">Geoguessr</a></li>
         <li><a href="https://www.fiverr.com/">Fiverr</a></li>
         <li><a href="https://chromewebstore.google.com/detail/chrome-audio-capture/kfokdmfpdnokpmpbjhjbcabgligoelgp">Chrome Audio Capture</a></li>
+        <li><a href="https://www.printables.com/">Printables</a></li>
+        <li><a href="https://www.capcut.com/">CapCut</a></li>
+        <li><a href="https://www.hostinger.com/">Hostinger</a></li>
     </ol>
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/r7U7BM2ASf6i98Yr61gcIK/CSCI-202-Slideshow?node-id=2-723&embed-host=share" allowfullscreen></iframe>
     <h2>24 Hour No Phone Assignment</h2>
     <ul>
         <li><a href="nophone.html">Read Here</a></li>
