--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSCI 202 Portfolio</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>CSCI 202 Portfolio</h1>
@@ -20,6 +21,8 @@
         <li><a href="https://maxduenhoelter.com">Final Project</a></li>
         <li><a href="https://youtu.be/ZrZsCpmGf6o">Final Project Youtube Link</a></li>
     </ol>
+    <h2>GitHub Repo</h2>
+            <a href="https://github.com/maxduenhoelter/CSCI202">GitHub Link</a>
     <h2>Interesting Websites</h2>
     <ol>
         <li><a href="https://www.nerdwallet.com/cost-of-living-calculator">Nerd Wallet</a></li>
@@ -32,6 +35,7 @@
         <li><a href="https://www.capcut.com/">CapCut</a></li>
         <li><a href="https://www.hostinger.com/">Hostinger</a></li>
     </ol>
+    <h2>Final Project Slideshow</h2>
     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/slides/r7U7BM2ASf6i98Yr61gcIK/CSCI-202-Slideshow?node-id=2-723&embed-host=share" allowfullscreen></iframe>
     <h2>24 Hour No Phone Assignment</h2>
     <ul>
